--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -12,6 +12,6 @@ jobs:
       - name: Say hello
         run: echo "Hello World!"
       - name: Now it is
-        run: echo date
+        run: date
       - name: Directory content
         run: ls -la
