--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint \"./**/*.{js,jsx}\"",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "cy:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -33,7 +35,9 @@
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^3.6.0",
+    "cypress": "^9.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.27.1",
     "html-loader": "^1.3.2",
