--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokedexfsodiego"
           heroku_email: "diegoromeropersonal@gmail.com"
+          healthcheck: "https://pokedexfsodiego.herokuapp.com/health"
+          checkstring: "ok"
