--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: "diegoromeropersonal@gmail.com"
           healthcheck: "https://pokedexfsodiego.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
