failing build with delay ci

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,3 +36,4 @@ jobs:
           healthcheck: "https://pokedexfsodiego.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+          delay: 10
