--- a/.github/workflows/health-check.yaml
+++ b/.github/workflows/health-check.yaml
@@ -8,14 +8,14 @@ on:
     - cron:  '59 23 * * *'
 
 jobs:
-  name: ping4health
-  steps:
-  - name: Check the deployed service URL
-    uses: jtalk/url-health-check-action@v2
-    with:
-      # Check the following URLs one by one sequentially
-      url: https://pokedexfsodiego.herokuapp.com/health
-      follow-redirect: no
-      max-attempts: 3
-      retry-delay: 10s
-      retry-all: no
+  ping4health:
+    steps:
+    - name: Check the deployed service URL
+      uses: jtalk/url-health-check-action@v2
+      with:
+        # Check the following URLs one by one sequentially
+        url: https://pokedexfsodiego.herokuapp.com/health
+        follow-redirect: no
+        max-attempts: 3
+        retry-delay: 10s
+        retry-all: no
