--- a/.github/workflows/health-check.yaml
+++ b/.github/workflows/health-check.yaml
@@ -16,7 +16,7 @@ jobs:
       with:
         # Check the following URLs one by one sequentially
         url: https://pokedexfsodiego.herokuapp.com/health
-        follow-redirect: no
+        follow-redirect: false
         max-attempts: 3
         retry-delay: 10s
         retry-all: no
