--- a/.github/workflows/health-check.yaml
+++ b/.github/workflows/health-check.yaml
@@ -19,4 +19,4 @@ jobs:
         follow-redirect: false
         max-attempts: 3
         retry-delay: 10s
-        retry-all: no
+        retry-all: false
